[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["osanshouo <53166653+osanshouo@users.noreply.github.com >"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"  # ここを追加


[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true



[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "Element",
    "HtmlElement",
    "Window",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response"
]
