[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["osanshouo <53166653+osanshouo@users.noreply.github.com >"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true

[dependencies]
#wasm-bindgen = "0.2"
wasm-bindgen = { version = "0.2", features = ["serde"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "Response", "Request", "RequestInit", "RequestMode","Element", "HtmlElement","HtmlCollection", "NodeList", "DomParser"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.1"
