[package]
name = "hello-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
web-sys = { version = "0.3", features = [
    "Window", "Document", "HtmlDocument", "HtmlElement", "Element", "Node", 
    "Request", "RequestInit", "RequestMode", "Response","DomParser","NodeList"
] }
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
scraper = "0.22.0"
serde_json = "1.0"
wasm-logger = "0.2"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"